assets/css/style.css
/* ... */
.navbar-light .navbar-nav .nav-link:hover {
    color: #e1aa12;
}

.navbar-brand2 {
    color: #fafafa;
    text-decoration: none;
    text-decoration-line: none;
}


.menu li {
  color: #fafafa;

}

.navbar-expand-lg .navbar-collapse{
    background-color: #072446;
    
}

#mynav li a {
    float: right;
}

/*-------heading-----*/

.uppercase {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 700;
    padding: 20px;
    margin: 10px 0px;
    text-transform: uppercase;
    color: #24292e;
}
/*-----------Hero Image------*/
.hero-image {
    width: 100%;
    height: auto;
    padding: 0;
}

.hero-image img {
   padding: 0;
   margin: 0;
   height: auto;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  
  

}
/*-----------about------*/

.about {
    background-color: #e1aa12;
    width: 100%;
    height: max-content;
    padding-top: 3.5rem;
    margin-bottom: 0;
    min-width: 100%;
}

.about p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    padding: 0px 20px 20px 20px;
    width: 100%;
    margin: 5px;
}

b, strong ,
strong {
    font-size: 23px;
    letter-spacing: 2px;
    color: #24292e;
}

em {
    font-weight: 600;
}

/*-----------services------*/

#services {
   padding-top: 3.5rem;
}

.service-item {
    padding: 0;
    margin: 0;
}

.services-heading {
    padding: 0;
}

.services h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

.s-container {
    background-color: #008089;
    width: 360px;
    min-height: 620px;
    max-height: fit-content;
    padding: 10px;
    margin: 10px auto;
    border: solid;
    border-color: #072446;
    border-radius: 5px;
}



/*-----------Coaches------*/

#team {
    padding-top: 3.5rem;
    
}

.coach-img  {
    border-radius: 50%;
    padding: 5px;
    margin: 10px auto;
    border-color: #e1aa12;
    border: solid;
}



.team {
    background-color: #013a67;
    width: 90%;
    min-height: 680px;
    max-height: fit-content;
    padding: 20px;
    margin: 10px auto;
    border: solid;
    border-color: #e1aa12;
    border-radius: 10px;
    color: #e1aa12;
    display: inline-block;
}

.social-coach {
    color: #e1aa12;
}

.social-coach:hover {
    color: #fafafa;
}

.follow-coach {
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
}

/*-----------Timetable------*/



.table {
    text-align: center;
    font-family: 'Raleway', sans-serif;
    background-color: #008089;
    border: solid 1em #072446;
    border-radius: 5px;
    margin: 20px 0px 20px 20px;
}

.table {
    max-width: 70%;
    margin: 5px auto
}

#timetable p {
    color: #24292e;
}

#timetable {
    min-height: fit-content;
    padding: 5px;
    padding-top: 3.5rem;
    width: 70%;
}

.table-title th {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    border: solid 5px #072446;
    
}

tbody {
    border: solid 5px #072446;

}

.table-border th {
    border: solid 5px #072446;
}

.table-border td {
    border: solid 5px #072446;
}


.schedule {
    margin: 25px;
    border: 5px;
    padding: 5px;
}


/*-----------SignUp------*/

#signup {
    padding-top: 3.5rem;
}

.sign-up {
   padding-bottom: 20px;
}

mark {
    background-color: #072446;
    color: #fafafa;
}

.sign-up p {
    color: #24292e;
}

.members-form {
    padding: 20px 60px;
    margin: 10px auto;
    max-width: 70%;
    background-color: #e1aa12;
    border: solid 2px;
    border-color: #072446;
    border-radius: 5px;
}

button[type="submit"] {
   padding-top: 15px;
   padding-bottom: 15px;
   color: #fafafa;
   background-color: #072446;
   margin: 15px auto;
   font-family: 'Monstserrat', sans-serif;
   font-weight: 600;
   
   
}

input {
    padding: 5px 0;
    margin-bottom: 20px;
    margin-top: 20px;
    margin-left: 5px;
}


/*-----------Footer---*/

footer {
    background-color: #072446;
    min-height: 120px;
    padding: 10px;
    margin-top: 0px;
    width: 100%;
}


.footer-heading {
    color: #fafafa;
    margin-right: 9px;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 0px;
    text-transform: uppercase;
    margin-top: 10px;
    float: left;

}

.heading-socials {
    text-align: right;
    margin-bottom: 8px;
    margin-right: 12px;
    margin-left: 0px;
    padding-bottom: 0px;
    padding-top: 0px;
    padding-right: 20px;
    color: #fafafa;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    text-transform: uppercase;
}

.social-link {
    color: #fafafa;
    font-size: 40px;
    padding: 2px;
    margin: 10px;
    display: inline-block;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out; 
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social {
    float: right;
    margin-top: 5px;
    margin-bottom: 10px;
}


.social-link:hover {
    color: #e1aa12;
}

.contact-details {
    color: #fafafa;
    margin-bottom: 5px;
    display: block;
    clear: both;
}

.contact-details .key,
.contact-details .value {
    padding-right: 8px;
    display: inline-block;
    justify-content: left;
    margin-bottom: 10px;
}

.contact-details .key p,
.contact-details .value p {
    padding-left: 2px;
    padding-bottom: 0;
    margin-left: 10px;
    margin-top: 10px;
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
    font-weight: 500;
}

.contact-details .key {
    align-items: center;
    padding-top: 2px;
    vertical-align: top;
}

.contact-details .key p {
    font-weight: 400;
    font-family: 'Monstserrat', sans-serif;
    text-align: left;
}

.contact-details .value p {
    position: relative;
    font-weight: 300;
    text-align: right;
    margin-left: 0px;
    padding-left: 0px;
    
}
/* ... */

